--- a/src/App.css
+++ b/src/App.css
@@ -23,4 +23,14 @@
   cursor: pointer;
 }
 
+.back_btn {
+  font-size: 18px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 3px;
+  background-color: #ff0707;
+  cursor: pointer;
+  color: #ffffff;
+}
+
 
